# sesame-whisperx-inference

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
app/: main.py
app/configs/: environment.py
app/dto/: base.py  inference_dto.py
app/exception/: http_exception.py
app/model/: llm_model.py
app/provider/llm/: base.py  interface.py  sesame_whisperx_llm_provider.py  sesame_whisperx_stream_llm_provider.py
app/provider/llm/sesame_whisperx_utils/: __init__.py  transcribe.py  vad.py
app/router/v1/: base.py  inference_route.py
app/service/: inference_service.py
app/utils/: object.py
tests/mocks/provider/llm/: vlm_websight_llm_mock.py
tests/service/: test_inference_service.py
tests/utils/exceptions/: test_exception.py
tests/utils/model/: test_suite.py
