[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sesame-whisperx-inference"
version = "0.1.0"
dependencies = [
    "fastapi[standard]>=0.113.0,<0.114.0",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings",
    "pytest",
    "pytest-asyncio",
    "torch>=2",
    "librosa",
    "soundfile",
    "torchaudio>=2",
    "tokenizers>=0.13,<0.16",
    "huggingface_hub==0.28.1",
    "moshi==0.2.2",
    "torchtune==0.4.0",
    "torchao==0.9.0",
    "silentcipher @ git+https://github.com/SesameAILabs/silentcipher@master",
    "faster-whisper==1.0.0",
    "pandas",
    "setuptools>=65",
    "nltk"
]
